--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-FrontEnd=https://final-heckthon-w49g-git-master-sonias-projects-b3266276.vercel.app/
+FrontEnd=https://final-heckthon-git-master-sonias-projects-b3266276.vercel.app
