--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://soniasohailkhan22:Foziakhan123@cluster0.wj9phhm.mongodb.
 JWT_SECRET=Jex32@94u%o0-mKxcAjbds
 EMAIL=soniasohailkhan22@gmail.com
 EMAIL_PASS=uojt qdmj aazd dkna
-Frontend_URL=https://final-heckthon-w49g-git-master-sonias-projects-b3266276.vercel.app/
+Frontend_URL=https://final-heckthon-git-master-sonias-projects-b3266276.vercel.app
