--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-FrontEnd=https://final-heckthon-git-master-sonias-projects-b3266276.vercel.app
+VITE_API_BASE_URL=https://final-heckthon-git-master-sonias-projects-b3266276.vercel.app
